[package]
name = "seedselection"
version = "0.1.0"
edition = "2024"
description = "A crate for deterministic selection approaches in distributed systems."
license = "MIT"
repository = "https://github.com/spacecomputerio/seedselection"

[dependencies]
sha2 = "0.10"
num-bigint = "0.4"
hex = "0.4.3"
digest = "0.10.7"
